--- a/style/position.css
+++ b/style/position.css
@@ -5,3 +5,10 @@
 .gap-5{
     gap: 50px; 
 }
+
+.justify-content-center{
+    justify-content: center;
+}
+.align-item-center{
+    align-items: center;
+}
