--- a/style/style.css
+++ b/style/style.css
@@ -4,10 +4,9 @@
 .line{
     text-decoration: underline;
 }
-.border{
-    border: 2px black;
-    padding: 50px;
+.pborde{
+    border-left: 3px lightslategray;
 }
 h5{
     font-size: 18px;
-}
+} 
