--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+
+
+
+
+
 @import url(./color.css);
 @import url(./position.css);
 @import url(./dimension.css);
@@ -10,3 +15,12 @@
 h5{
     font-size: 18px;
 } 
+@media(max-width:900px){
+    .f-c{
+       flex-direction: column
+    }
+    .w-300{
+        width: 100%;
+    }
+   
+}
